разработка лендинга начало

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@splidejs/splide": "^4.1.4",
     "autoprefixer": "^10.4.17",
     "babel": "^6.23.0",
     "browser-sync": "^2.29.3",
